yle-dl - download videos from Yle servers
Copyright 2009-2021 Antti Ajanki
Distributed under the GPL v3

<unreleased>

- Support for new Svenska Arkivet URLs: https://svenska.yle.fi/a/
- Support for a new stream type on Areena

Version 20210502

- Fixed the support for yle.fi/uutiset video and audio

Version 20210212

- Partially fixed a problem downloading radio programs on Mac OS X:
  individual episodes can again be downloaded but attempting to
  download a series results only downloading the first episode.
- Some upcoming episodes were being downloaded as zero-length files
- Only Python 3.5+ supported from now on

Version 20201022

- Works again on Python 3.7 and older

Version 20201019

- Download subtitles into a separate file when using "--backend wget"
- Fixed --latestepisode to actually download the latest, not the first, episode
- The wget backend now really is silent on -qq

Version 20200807

- Fixed failing audio episodes caused by a page not being recognizing correctly
- Start recording 500 seconds from the beginning of a stream: --startposition 500
- Start recording "live" TV 3600 seconds in the past: --startposition -3600
- Support links with a start offset: https://areena.yle.fi/1-4292525?seek=986
- Metadata includes download links for subtitles

Version 20200628

- Fixed metadata and episode numbers in the output filenames
- PHP and rtmpdump are not needed anymore
- Removed unused options --hardsubs and --audiolang

Version 20200618

- Fixed downloading from Areena after the recent API changes
- Fixed Elävä Arkisto support

Version 20200419

- Support for new Areena audio series pages
- Live TV at 720p resolution by default (use --resolution for lower quality)
- Fixed --maxbitrate best when used together with --resolution

Version 20200222

- Try to avoid generating too long filenames
- Fixed a crash on Sámi language titles
- Better error message if a stream has expired
- Show an error when source has multiple clips but only one output given
