@@ -48,18 +48,8 @@ jobs:
       - python/install-packages:
           pkg-manager: pip-dist
           pip-dependency-file: setup.py
-      - when:
-          condition:
-              equal: [ "3.5", << parameters.pyversion >> ]
-          steps:
-              - run:
-                  command: pip install "pytest<6.2.0"
-      - unless:
-          condition:
-              equal: [ "3.5", << parameters.pyversion >> ]
-          steps:
-              - run:
-                  command: pip install pytest
+      - run:
+          command: pip install pytest
       - run:
           name: Test
           command: |
@@ -77,4 +67,4 @@ workflows:
             - lint
           matrix:
               parameters:
-                  pyversion: ["3.5", "3.6", "3.7", "3.8", "3.9"]
+                  pyversion: ["3.6", "3.7", "3.8", "3.9"]
