@@ -6,6 +6,7 @@ Distributed under the GPL v3
 
 - Support for new Svenska Arkivet URLs: https://svenska.yle.fi/a/
 - Support for a new stream type on Areena
+- Only Python 3.6+ supported from now on
 
 Version 20210502
 
